# CookieCutterServeML

./: .dockerignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  Dockerfile  Makefile  README.md  changelog_generator.py  deployment.yaml  pyproject.toml  requirements.txt  version_check.py
app/: config.py  main.py  middleware.py
app/api/: health.py  predict.py  registry.py
app/core/: __init__.py  middleware.py
app/inference/: __init__.py  model_inference.py
app/inference/postprocess/: __init__.py  to_class.py
app/inference/preprocess/: __init__.py  channels_first.py  pad_resize.py
models/v1/mobilenetv2/v1/: model.json
