[project]
name = "serve-ml"
version = "0.1.5"
description = "A template for serving ML models"
authors = [
    { name = "Open-Knowledge-AI" }
]
requires-python = ">=3.12"

[tool.black]
line-length = 88
target-version = ['py312']
exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
  | __pycache__
)/
'''

[tool.flake8]
max-line-length = 88
exclude = [".git", "__pycache__", "build", "dist"]
[tool.isort]
profile = "black"
line_length = 88

[tool.pre-commit]
repos = [
    { repo = "https://github.com/pre-commit/pre-commit-hooks", rev = "v4.4.0", hooks = [
        { id = "trailing-whitespace" },
        { id = "end-of-file-fixer" },
        { id = "check-yaml" }
    ]}
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
